# avaliacao_desempenho_libs

./: .dockerignore  .gitignore  Dockerfile  README.md  convert.py  docker-compose.yml  main.ipynb  main.py  pyproject.toml
